data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_766.wast
;; - Test Description 7: Develop a loop where each iteration pushes a sequence of values to the stack and uses `br_if` to branch once a specific target value is reached. This will test the correctness of condition evaluation during iterative value checks.

(assert_invalid
  (module
    (func $loop-br-if-target-value
      (i32.const 0)          ;; Initial value
      (loop (result i32)     ;; Loop block with result type i32
        (i32.const 5)        ;; Push target value 5 to stack
        i32.ge_s             ;; Check if stack top >= initial value
        (br_if 0)            ;; Branch to loop start if condition holds
        (i32.const 10)       ;; Target value assumed to incorrectly alter stack in some implementations
      )
    )
  )
  "type mismatch"
)